# tool_db

./: .env.example  .gitignore  AGENTS.md  README.md  biocontrol_toolkit_design_spec.md  docker-compose.local.yml  pyproject.toml  render.yaml
.cursor/agents/: entity-resolution-auditor.md  gap-linker.md  literature-curator.md  replication-auditor.md  schema-critic.md  workflow-modeler.md
.cursor/rules/: 00-repo-map.mdc  05-markdown-harness-sync.mdc  10-schema-safety.mdc  15-backend-ingestion-and-pipeline.mdc  20-extraction-contracts.mdc  30-citation-and-replication.mdc  40-gap-map-linking.mdc  50-design-system.mdc
apps/: __init__.py
apps/api/: README.md  main.py
apps/web/: README.md  package.json
apps/worker/: README.md  __init__.py  main.py
db/migrations/: 0001_canonical_schema_v1.sql  0002_item_detail_enrichment.sql  0002_workflow_stage_templates.sql  0003_workflow_stage_assumption_fk.sql  0004_modality_recombination.sql  0005_first_pass_extractions.sql  0006_gap_map_graph.sql  0007_source_document_pmcid.sql  0008_workflow_evidence_links.sql  README.md  (+4 more)
docs/: design-system.md
prompts/: generate-mock-dataset.md
scripts/: agent_test_visibility.py  sync_render_db.py
tests/: test_db_migrations.py  test_entity_resolution.py  test_item_materialization.py  test_llm_extractor.py  test_llm_web_research.py  test_load_plan.py  test_pipeline.py  test_raw_store.py  test_real_extraction_artifacts.py  test_real_extraction_artifacts_web_research.py  test_repository_citations.py  test_source_smoke_test.py
tmp/: review.load-plan.json  review.normalized.json
(+180 files in other folders)
